<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_all"
            style="@style/FilterIconStyle"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/desc_ic_all"
            android:src="@drawable/ic_all" />

        <ImageView
            android:id="@+id/imageview_happy"
            style="@style/FilterIconStyle"
            android:contentDescription="@string/desc_ic_happy"
            android:src="@drawable/ic_happy" />

        <ImageView
            android:id="@+id/imageview_sunny"
            style="@style/FilterIconStyle"
            android:layout_marginStart="64dp"
            android:contentDescription="@string/desc_ic_sun"
            android:src="@drawable/ic_sun" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/cabin"
        android:text="@string/label_hello"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header" />

    <TextView
        android:id="@+id/textview_msg_motivation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/cabin"
        android:text="@string/label_msg_motivation"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_msg_motivation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_new_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/cabin"
        android:paddingHorizontal="32dp"
        android:text="@string/button_new_sentence"
        android:textSize="18sp"
        app:backgroundTint="@color/purple"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>